Initial commit warrior + space game

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Simple Canvas Game</title>
+    <style type="text/css" media="all">
+      canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        -moz-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+        -o-transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%) translateY(-50%);
+      }
+    </style>
 	</head>
 	<body>
 		<script src="js/game.js"></script>
